# littlesmalltalk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README-BUDD.md  README.md  TODO.md  debug.st  globs.h  interp.c  interp.h  main.c  memory.c  memory.h  vsta.st
.github/workflows/: codeql.yml
ImageBuilder/: Makefile  imageBuilder.c
archive/: README.md  small.v1.tar.Z  susie-0.3.tgz
archive/www.littlesmalltalk.org-Docs/: LittleSmalltalk_ObjectRepresentation.doc  LittleSmalltalk_TutorialForBeginners.doc  README.md  imageformat.md
docs/: LittleSmalltalk_ByteCode.doc  LittleSmalltalk_Primitives.doc  LittleSmalltalk_TheGarbageCollector.doc  README.md  imageformat.md
src/: Makefile
src/bootstrap/: Makefile  bootstrap.c  bootstrap2.c  bootstrap3.c  imageSource  mem.h
src/smalltalk/system/: Application.st  ArgumentNode.st  Array.st  AssignNode.st  Association.st  Block.st  BlockNode.st  BodyNode.st  Boolean.st  ByteArray.st  CascadeNode.st  Char.st  Class.st  Collection.st  Context.st  Dictionary.st  Encoder.st  False.st  File.st  IdentitySet.st  InstNode.st  Integer.st  Interval.st  Link.st  List.st  LiteralNode.st  Log.st  Magnitude.st  MessageNode.st  Method.st  Node.st  Number.st  Object.st  OrderedArray.st  Parser.st  ParserNode.st  PrimitiveNode.st  Process.st  REPL.st  ReturnNode.st  (+15 more)
src/smalltalk/vsta/: vstaio.st
src/smalltalk/webide/: webide.st
src/smalltalk/webui/: classbrowser.st
src/vm/: Makefile  bootstrap.c  err.c  err.h  globals.c  globals.h  globs.h  image.c  image.h  interp.c  interp.h  mac_prims.c  mac_prims.h  main.c  memory.c  memory.h  prim.c  prim.h  version.c  version.h.in
src/vm_new/: array.c  array.h  bootstrap3.c  globals.c  globals.h  memory.c  memory.h
